packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/event-type-sequence-property-is-multi-valued.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event definition validation, verify
if event types that define a sequence property
that is multi-valued are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="sequence"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" sequence="a" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="false" optional="false" multivalued="true" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
